# c0mpiled_Hackathon

./: LICENSE  README.md  🏗️ Complete Backend & Frontend Structure.md  🏗️ Complete System Architecture & Data Flow.md  👥 3-Person Team Allocation (3-Hour Sprint).md
Additional Face Det/: Face_Detection_and_Verification.md  face_verification.py
Sarvi_work/: Guard_App_Requirements.md  Person_3.md
Sarvi_work/guard_app/: GuardApp.jsx
backend/: .env  auth.py  config.py  database.py  main.py  models.py  pyproject.toml  requirements.txt  schemas.py
backend/api/: calendar.py  face.py  guards.py  notifications.py  photos.py  recurring.py  residents.py  visitors.py  voice.py
backend/background/: expiry_checker.py  recurring_generator.py  scheduler.py
backend/core/: __init__.py  config.py  limiter.py  logging.py
backend/data/: database.db
backend/guard_frontend/: PhotoCapture.jsx  RecurringVisitors.jsx  RequestApproval.jsx
backend/services/: approval_engine.py  calendar_sync.py  face_service.py  notification_service.py  photo_manager.py  time_validator.py  voice_processor.py
backend/utils/: __init__.py  audit_logger.py  ner_extractor.py  qr_generator.py
backend_person3/: Backend_Integration_Guide.md  Progress_Summary.md  database.py  main.py  models.py
backend_person3/routers/: guards.py  notifications.py  photos.py  recurring.py  visitors.py
backend_person3/services/: notification_service.py  photo_manager.py
resident-app/: README.md  next.config.mjs  package-lock.json  package.json  tailwind.config.ts
resident-app/app/: globals.css  layout.tsx
resident-app/app/(resident)/: layout.tsx  page.tsx
resident-app/app/(resident)/approvals/: page.tsx
resident-app/app/(resident)/recurring/: page.tsx
resident-app/app/(resident)/settings/: page.tsx
resident-app/app/api/approval-requests/: route.ts
resident-app/app/api/auth/change-password/: route.ts
resident-app/app/api/auth/login/: route.ts
resident-app/app/api/auth/me/: route.ts
resident-app/app/api/auth/upload-photo/: route.ts
resident-app/app/api/guard/expected-today/: route.ts
resident-app/app/api/guard/face-detect/: route.ts
resident-app/app/api/guard/face-verify/: route.ts
resident-app/app/api/guard/request-approval/: route.ts
resident-app/app/api/guard/search/: route.ts
resident-app/app/api/recurring-visitors/: route.ts
resident-app/app/api/recurring-visitors/add/: route.ts
resident-app/app/api/recurring-visitors/toggle/: route.ts
resident-app/app/api/stats/: route.ts
resident-app/app/guard/: layout.tsx  page.tsx
resident-app/app/login/: page.tsx
resident-app/components/: AddRecurringModal.tsx  AddVisitorModal.tsx  FaceDetectionPanel.tsx  GuardRequestModal.tsx  LanguageToggle.tsx  VoiceCommandModal.tsx
resident-app/components/shared/: Avatar.tsx  Badge.tsx  BottomNav.tsx  Button.tsx  Card.tsx  FAB.tsx  Modal.tsx  StatCard.tsx  index.ts
resident-app/lib/: api.ts  auth.tsx  i18n.ts  types.ts
(+5 files in other folders)
